# Zoppler_C2

./: README.md
counter-uas-c2/: CMakeLists.txt  DESIGN_AND_IMPLEMENTATION.md  README.md  build.sh  counter-uas-c2.pro
counter-uas-c2/config/: cameras.json  effectors.json  sensors.json  system.json
counter-uas-c2/resources/: resources.qrc
counter-uas-c2/resources/simulation_assets/: README.md
counter-uas-c2/src/: main.cpp
counter-uas-c2/src/config/: CameraConfig.cpp  CameraConfig.h  ConfigManager.cpp  ConfigManager.h  DatabaseManager.cpp  DatabaseManager.h
counter-uas-c2/src/core/: EngagementManager.cpp  EngagementManager.h  ThreatAssessor.cpp  ThreatAssessor.h  Track.cpp  Track.h  TrackManager.cpp  TrackManager.h
counter-uas-c2/src/effectors/: DirectedEnergySystem.cpp  DirectedEnergySystem.h  EffectorInterface.cpp  EffectorInterface.h  KineticInterceptor.cpp  KineticInterceptor.h  RFJammer.cpp  RFJammer.h
counter-uas-c2/src/network/: MessageProtocol.cpp  MessageProtocol.h  NetworkManager.cpp  NetworkManager.h
counter-uas-c2/src/sensors/: CameraSystem.cpp  CameraSystem.h  RFDetector.cpp  RFDetector.h  RadarSensor.cpp  RadarSensor.h  SensorInterface.cpp  SensorInterface.h
counter-uas-c2/src/simulators/: EffectorSimulator.cpp  EffectorSimulator.h  SensorSimulator.cpp  SensorSimulator.h  SystemSimulationManager.cpp  SystemSimulationManager.h  TrackSimulator.cpp  TrackSimulator.h  VideoSimulator.cpp  VideoSimulator.h
counter-uas-c2/src/ui/: AlertQueue.cpp  AlertQueue.h  CameraStatusPanel.cpp  CameraStatusPanel.h  EffectorControlPanel.cpp  EffectorControlPanel.h  EngagementDialog.cpp  EngagementDialog.h  HeaderBar.cpp  HeaderBar.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  ModernComponents.cpp  ModernComponents.h  PPIDisplayWidget.cpp  PPIDisplayWidget.h  PTZControlWidget.cpp  PTZControlWidget.h  QuickActionsPanel.cpp  QuickActionsPanel.h  SensorStatusPanel.cpp  SensorStatusPanel.h  SidebarNavigation.cpp  SidebarNavigation.h  SkyGuardMainWindow.cpp  SkyGuardMainWindow.h  SkyGuardTheme.cpp  SkyGuardTheme.h  SystemStatusWidget.cpp  SystemStatusWidget.h  TrackDetailPanel.cpp  TrackDetailPanel.h  TrackListWidget.cpp  TrackListWidget.h  VideoControlBar.cpp  VideoControlBar.h  VideoDisplayWidget.cpp  VideoDisplayWidget.h  (+2 more)
counter-uas-c2/src/ui/dialogs/: EffectorStatusDialog.cpp  EffectorStatusDialog.h  RecordingSettingsDialog.cpp  RecordingSettingsDialog.h  RulesOfEngagementDialog.cpp  RulesOfEngagementDialog.h  SensorConfigDialog.cpp  SensorConfigDialog.h  SimulationSettingsDialog.cpp  SimulationSettingsDialog.h  TiffMapSettingsDialog.cpp  TiffMapSettingsDialog.h
counter-uas-c2/src/ui/pages/: AlertLogPage.cpp  AlertLogPage.h  SensorNetworkPage.cpp  SensorNetworkPage.h  SystemHealthPage.cpp  SystemHealthPage.h  TacticalMapPage.cpp  TacticalMapPage.h  ThreatDatabasePage.cpp  ThreatDatabasePage.h
counter-uas-c2/src/utils/: CoordinateUtils.cpp  CoordinateUtils.h  FrameBuffer.cpp  FrameBuffer.h  KalmanFilter.cpp  KalmanFilter.h  Logger.cpp  Logger.h  TimeUtils.cpp  TimeUtils.h
counter-uas-c2/src/video/: CameraSlewController.cpp  CameraSlewController.h  FileVideoSource.cpp  FileVideoSource.h  GigEVideoSource.cpp  GigEVideoSource.h  PTZController.cpp  PTZController.h  RTSPVideoSource.cpp  RTSPVideoSource.h  SimulationVideoSource.cpp  SimulationVideoSource.h  VideoDecoder.cpp  VideoDecoder.h  VideoOverlayRenderer.cpp  VideoOverlayRenderer.h  VideoRecorder.cpp  VideoRecorder.h  VideoSource.cpp  VideoSource.h  VideoStreamManager.cpp  VideoStreamManager.h
counter-uas-c2/tests/: test_threat_assessor.cpp  test_track_manager.cpp  test_video_pipeline.cpp
